--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
+  "homepage": "https://bottmzup.com",
   "name": "newco",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -15,6 +16,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.9.1",
     "formik": "^2.2.9",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-device-detect": "^2.2.2",
@@ -28,6 +30,8 @@
     "autoprefixer": "10.4.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
