--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "10.4.5",
     "axios": "^1.1.3",
+    "baseui": "^12.2.0",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.9.1",
     "formik": "^2.2.9",
@@ -21,9 +22,12 @@
     "react-bootstrap": "^2.5.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-tabs": "^5.1.0",
+    "styletron-engine-atomic": "^1.5.0",
+    "styletron-react": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
   "overrides": {
