--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "baseui": "^12.2.0",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.9.1",
-    "embla-carousel-react": "^7.0.5",
+    "embla-carousel-react": "^7.1.0",
     "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
     "jwt-decode": "^3.1.2",
@@ -24,17 +24,13 @@
     "react-bootstrap": "^2.5.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
-    "react-photo-gallery": "^8.0.0",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-tabs": "^6.0.0",
     "styletron-engine-atomic": "^1.5.0",
     "styletron-engine-monolithic": "^1.0.0",
     "styletron-react": "^6.1.0",
     "web-vitals": "^2.1.4"
-  },
-  "overrides": {
-    "autoprefixer": "10.4.5"
   },
   "scripts": {
     "predeploy": "npm run build",
