final ticket page ready

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "baseui": "^12.2.0",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.9.1",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
     "jwt-decode": "^3.1.2",
@@ -27,6 +28,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.0",
+    "react-tooltip": "^5.11.1",
     "styletron-engine-atomic": "^1.5.0",
     "styletron-engine-monolithic": "^1.0.0",
     "styletron-react": "^6.1.0",
