--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.3",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.0",
