--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-multi-carousel": "^2.8.3",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-tabs": "^6.0.0",
     "react-tooltip": "^5.11.1",
     "styletron-engine-atomic": "^1.5.0",
