--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "react-tabs": "^6.0.0",
     "react-tooltip": "^5.11.1",
+    "slick-carousel": "^1.8.1",
     "styletron-engine-atomic": "^1.5.0",
     "styletron-engine-monolithic": "^1.0.0",
     "styletron-react": "^6.1.0",
