--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "baseui": "^12.2.0",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.9.1",
+    "change-case": "^5.4.2",
     "date-fns": "^2.29.3",
     "embla-carousel-react": "^8.0.0-rc15",
     "formik": "^2.2.9",
@@ -28,6 +29,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.3",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-range": "^1.8.14",
